--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "vue-cli-service serve"
   },
   "dependencies": {
+    "@vue/cli-service": "^5.0.8",
     "axios": "^1.8.4",
     "pinia": "^3.0.2",
     "vue": "^3.5.13",
