--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-elements": "^0.4.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
