--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.2.5"
+    "vite": "^6.2.5",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
