--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "daisyui": "^5.0.28",
     "js-cookie": "^3.0.5",
     "pinia": "^3.0.2",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-elements": "^0.4.0",
     "vue": "^3.5.13",
